public/css/sass/pages/_dashboard.scss
.dashboard-container {
    background-color: white;
    @include box-shadow(1px 2px 10px -1px rgba(0,0,0,0.25));
    margin: 20px auto;
    padding: 20px;
}

.dashboard-assignment {
    @include box-shadow(1px 2px 10px -1px rgba(0,0,0,0.25));
    margin: 20px;
    min-height: 300px;

    .assignment-icon {
        display: none;
        height: 25px;
        padding-right: 10px;
        width: 25px;
    }

    .dashboard-image {
        background-color: white;
        @include box-shadow(1px 2px 10px -1px rgba(0,0,0,0.25));
        display: inline-block;
        float: left;
        margin: 30px 20px 10px 30px;
        padding: 10px;
    }

    img {
        height: 200px;
        object-fit: cover;
        object-position: center;
        width: 200px;
    }

    h2 {
        display: block;
        padding: 35px 30px 10px 0;
        text-align: left;
    }

    p {
        font-size: 16px;
        line-height: 1.5;
        padding: 10px 30px 10px 20px;
    }

    .tag {
        background-color: $turquoise1;
        @include box-shadow(1px 2px 10px -1px rgba(0,0,0,0.25));
        display: inline-block;
        letter-spacing: 2px;
        margin: 10px 0 30px 20px;
        padding: 8px 17px;
    }

}

.dashboard-assignment:hover {
    @include transform(scale(1.01));
}

@media (max-width: 880px) {

    .dashboard-assignment {

        min-height: 100px;

        .assignment-icon {
            display: inline-block;
        }

        .dashboard-image {
            display: none;
        }

        h2 {
            display: block;
            font-size: 20px;
            margin: 0;
            padding: 10px;
        }
        p {
            display: none;
        }

        .tag {
            font-size: 14px;
            margin: 10px 10px 20px 10px;
        }
    }

    .dashboard-assignment:hover {
        @include transform(scale(1.0));
    }
}

